# minipupper_kinematics

./: .gitignore  README.md  install.sh  make-docs.sh
controller/: install.sh
docs/: 1-kinematics_2d.html  2-urdf.html  3-leg_movement_2d.html  3.1-minipupper.html  3.2-bezier_curve.html  3.3-gaits-2d.html  4-3D_coordinate_system.html  5-kinematics_3d.html  5.1-gaits_revisited.html  6-Simulation.html  7-Frameworks.html  genindex.html  intro.html  objects.inv  search.html  (+1 more)
ur5/controller/minipupper/: .coveragerc  ChangeLog  requirements.txt  setup.cfg
ur5/controller/minipupper/.eggs/pbr-5.9.0-py3.9.egg/EGG-INFO/: RECORD
ur5/controller/minipupper/etc/minipupper/: minipupper.yaml
ur5/controller/minipupper/minipupper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
ur5/controller/minipupper/minipupper/console/: cli.py
ur5/controller/minipupper/minipupper/simulator/: hardware_interface.py  pybullet.py
webserver/backend/: AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
webserver/backend/backend/: app.py  sim.py  test.py  test_sim.py
webserver/backend/backend/controller/: walk.py  wobble.py
webserver/backend/backend/controller/pupper/: hardware_interface.py
webserver/backend/backend/controller/simulator/: hardware_interface.py  pybullet.py  test_client.py  test_client_udp.py  test_server.py  test_server_udp.py
webserver/backend/backend/static/: 3rdpartylicenses.txt  index.html  main.ca30fbc60e32611c.js  polyfills.b473ee7ed9b0dab7.js  runtime.400dfc8e19c86447.js  styles.af496c625d1d99e8.css
(+118 files in other folders)
