[metadata]
name             = backend
version          = 0.1.0
summary          = This is backend project
description-file = README.rst
author           = Marlysys
author-email     = hdumcke@marlysys.com
home-page        = http://www.marlysys.com

[files]
packages         = backend

[global]
setup-hooks      = pbr.hooks.setup_hook

[entry_points]
console_scripts  =
    web-controller     = backend.app:main
    minipupper-sim     = backend.sim:main

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
