[metadata]
name             = minipupper
version          = 0.1.0
summary          = minipupper execution environment
description_file = README.rst
author           = Horst Dumcke
home_page        = https://github.com/hdumcke

[files]
packages         = minipupper

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = True

[options.package_data]
* = *.png

[entry_points]
console_scripts  =
    minipupper   = minipupper.console.cli:minipupper

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[wheel]
universal       = 1
